--- a/front/index.html
+++ b/front/index.html
@@ -16,9 +16,9 @@
             <button id="jokeButton">Get a Random Joke</button>
         </div>
         <div class="add-joke-block">
-            <h2>Add a new joke</h2>
+            <h2>Entrez votre blague</h2>
             <input type="text" id="jokeInput" placeholder="Enter your joke here">
-            <button id="addJokeButton">Add Joke</button>
+            <button id="addJokeButton"></button>
         </div>
     </div>
     <script src="script.js"></script>
