--- a/front/index.html
+++ b/front/index.html
@@ -12,12 +12,12 @@
             <img id="jokeImage" src="img/Untitled.png" alt="Joke Image">
         </div>
         <div class="content-block">
-            <div id="jokeText" class="joke-text">Press the button to get a joke</div>
-            <button id="jokeButton">Get a Random Joke</button>
+            <div id="jokeText" class="joke-text">Appuyez pour avoir une blague aléatoire</div>
+            <button id="jokeButton">Cliquez !</button>
         </div>
         <div class="add-joke-block">
             <h2>Entrez votre blague</h2>
-            <input type="text" id="jokeInput" placeholder="Enter your joke here">
+            <input type="text" id="jokeInput" placeholder="Allez y !">
             <button id="addJokeButton"></button>
         </div>
     </div>
